RESOLVED FIXED171838
font-stretch: normal selects expanded fonts instead of condensed fonts
https://bugs.webkit.org/show_bug.cgi?id=171838
Summary font-stretch: normal selects expanded fonts instead of condensed fonts
Myles C. Maxfield
Reported 2017-05-08 17:13:24 PDT
font-stretch: normal selects expanded fonts instead of condensed fonts
Attachments
Patch (4.27 KB, patch)
2017-05-08 17:16 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2017-05-08 17:16:07 PDT
WebKit Commit Bot
Comment 2 2017-05-09 11:02:16 PDT
Comment on attachment 309442 [details] Patch Clearing flags on attachment: 309442 Committed r216517: <http://trac.webkit.org/changeset/216517>
WebKit Commit Bot
Comment 3 2017-05-09 11:02:17 PDT
All reviewed patches have been landed. Closing bug.
Myles C. Maxfield
Comment 4 2017-05-09 13:38:00 PDT
Note You need to log in before you can comment on or make changes to this bug.