font-stretch: normal selects expanded fonts instead of condensed fonts https://bugs.webkit.org/show_bug.cgi?id=171838 <rdar://problem/31005481>

Reviewed by Jon Lee.

Source/WebCore:

CSS Fonts level 3 says: "If the value of ‘font-stretch’ is ‘normal’ or one of the condensed
values, narrower width values are checked first, then wider values."

CSS Fonts level 4 erroneously was incompatible with this, but was updated in
https://github.com/w3c/csswg-drafts/commit/4559389d183bbaaf3321af5ba1c924caa7c488bb
to be consistent with this.

Now, CSS Fonts level 4 states: "If the desired stretch value is less than or equal to100,
stretch values below the desired stretch value are checked in descending order followed by
stretch values above the desired stretch value in ascending order"

Test: fast/text/font-width-100.html

* platform/graphics/FontSelectionAlgorithm.cpp:

LayoutTests:

* fast/text/font-width-100-expected.html: Added.
* fast/text/font-width-100.html: Added.


Canonical link: https://commits.webkit.org/188786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216517 268f45cc-cd09-0410-ab3c-d52691b4dbfc